Beginning dep controls function

--- a/views/utilizadorer.jade
+++ b/views/utilizadorer.jade
@@ -149,37 +149,40 @@ block content
 
 				switch($("#departamento").val()) {
 					case "Telco":
-						cargo.innerHTML = "<option value=Maputo data-cont=611df4937d82f600d87c4be4>Maputo</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Climatização e Electricidade":
-						cargo.innerHTML = "<option value=Gaza data-cont=611e23d0f9b1b31cd868a302>Gaza</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
 						break;
 					case "Financeiro":
-						cargo.innerHTML = "<option value=Sofala data-cont=611e243af9b1b31cd868a304>Sofala</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
 						break;
 					case "Tecnologias de Informação":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Centro de Dados":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Energia":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Administrativo":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Qualidade e Otimizaçãote":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Centro de Suporte de Operações":
-						cargo.innerHTML = "<option value=Call Center data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
 						break;
 					case "Logística e Armazém":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 					case "Recursos Humanos":
-						cargo.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						break;
+					case "Recursos Humanos":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
 						break;
 				}
 			}
