--- a/views/utilizadorer.jade
+++ b/views/utilizadorer.jade
@@ -149,40 +149,40 @@ block content
 
 				switch($("#departamento").val()) {
 					case "Telco":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Manager data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Manager data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Climatização e Electricidade":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Manager data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Manager data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Financeiro":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Tecnologias de Informação":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option>";	
 						break;
 					case "Centro de Dados":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Manager data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Manager data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Energia":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Administrativo":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Qualidade e Otimizaçãote":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Centro de Suporte de Operações":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Call Center data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
 						break;
 					case "Logística e Armazém":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Motorista</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Fiel de Armazém</option>";	
 						break;
 					case "Recursos Humanos":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
-					case "Recursos Humanos":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+					case "Direcção Geral":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) Geral</option>";	
 						break;
 				}
 			}
