--- a/views/utalizadores_detalhes.jade
+++ b/views/utalizadores_detalhes.jade
@@ -7,18 +7,14 @@ block content
 				.row
 					.col.s12.m6
 						label(for="nivel_acesso") <span data-i18n="demo.utilizador_form.nivel_acesso"></span>
-						select.browser-default(id="nivel_acesso", name="nivel_acesso", style="font-family:")
 							if Usuarios
 								if Usuarios[0].nivel_acesso == "normal"
-									option(value="normal", select.browser-defaulted="select.browser-defaulted") Normal
+									input.preencher( autocomplete="off", disabled, type="text", style="font-family:;color:#12375c" ,id="nome" ,name="nome", value="Normal")
 								else
-									option(value="admin", select.browser-defaulted="select.browser-defaulted") Administrador
-							else
-								option(value="normal") Normal
-								option(value="admin") Administrador
+									input.preencher( autocomplete="off", disabled, type="text", style="font-family:;color:#12375c" ,id="nome" ,name="nome", value="Administrador") 
 					.col.s12.m6.input-field
 						label(for="nome") <span data-i18n="demo.utilizador_form.nome"></span>
-						input.preencher( autocomplete="off", type="text", style="font-family:;color:#12375c" ,id="nome" ,name="nome", value="#{Usuarios[0].nome? Usuarios[0].nome : ''}")
+						input.preencher( autocomplete="off", disabled, type="text", style="font-family:;color:#12375c" ,id="nome" ,name="nome", value="#{Usuarios[0].nome? Usuarios[0].nome : ''}")
 					.col.s12.m6.input-field
 						label(for="user_code") Codigo do Utilizador
 						input.preencher(autocomplete="off", type="text", style="font-family:;color:#12375c" ,id="user_code" ,name="user_code", value="#{Usuarios? Usuarios[0].user_code : ''}")
