--- a/views/utilizador_edittar.jade
+++ b/views/utilizador_edittar.jade
@@ -112,26 +112,72 @@ block content
 	block js
 		script(type="text/javascript" src="/js/jquery.mask.js")
 		script.
-			//- setInterval(function(){document.getElementById("utilizadorId").className="activarAzul"}, 50);
-			//- setTimeout(function(){
-			//- if(window.innerWidth<600){
-			//- document.getElementById("mySidebar").style.width = "0";
-			//- document.getElementById("main").style.marginLeft= "0";
-			//- document.getElementById("main").style.width="100%";
-			//- document.getElementById("main").style.marginBottom="0";}
-			//- }, 50);
+			var region = document.getElementById('regiao'); 
+			var province = document.getElementById('provincia_trabalho');
+			
+			var dep = document.getElementById('departamento');
+			var cargo = document.getElementById('funcao');  
 
-			//- document.ready(function(){function mes(){
-			//- var novoo;
-			//- var ms= new Date()
-			//- if((ms.getMonth()+1)<10)
-				//- novoo='0'+ms
-				//- return novoo;}
-			//- else{
-			//- novoo=''+(ms.getMonth()+1);
-			//- return novoo;
-			//- }
-			//- }})
+			region.onchange = () => {	
+				
+				switch($("#regiao").val()) {
+					case "maputo":
+						province.innerHTML = "<option value=Maputo data-cont=611df4937d82f600d87c4be4>Maputo</option>";	
+						break;
+					case "sul":
+						province.innerHTML = "<option value=Gaza data-cont=611e23d0f9b1b31cd868a302>Gaza</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
+						break;
+					case "centro":
+						province.innerHTML = "<option value=Sofala data-cont=611e243af9b1b31cd868a304>Sofala</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
+						break;
+					case "norte":
+					province.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
+					break;
+				}
+
+			}
+
+			dep.onchange = () => {	
+
+				switch($("#departamento").val()) {
+					case "Telco":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Climatização e Electricidade":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
+						break;
+					case "Financeiro":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Contabilista data-cont=63fe12569d5ad1356cbb6062>Contabilista</option><option value=Procurement data-cont=615336500bd5ed0cdc5ea1a8>Procurement</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Tecnologias de Informação":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Centro de Dados":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Energia":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
+						break;
+					case "Administrativo":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Qualidade e Otimização":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Centro de Suporte de Operações":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Call Center data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
+						break;
+					case "Logística e Armazém":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value=Fiel de Armazém data-cont=63fe136a72cae53f58eb366d>Fiel de Armazém</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Recursos Humanos":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						break;
+					case "Direcção Geral":
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) Geral</option>";	
+						break;
+				}
+			}
 
 			setTimeout(function(){document.getElementById("utilizadorId").className="activarAzul"}, 100);
 			setTimeout(function(){
