--- a/views/utilizador_edittar.jade
+++ b/views/utilizador_edittar.jade
@@ -43,9 +43,11 @@ block content
 						select.browser-default.browser-default(name="provincia_trabalho", id="provincia_trabalho", style="font-family:")
 							-for(let i=0; i<AdMagen[0].provincia.length; i++)
 								option(value="#{AdMagen[0].provincia[i].nome}", data-cont="#{AdMagen[0].provincia[i]._id}" , selected="#{AdMagen[0].provincia[i]._id}"=="#{Usuarios[0].provincia_id}"? true:false) #{AdMagen[0].provincia[i].nome}
-					.col.s12.m6.input-field.exclusivo
-						label(for="profissao") <span data-i18n="demo.utilizador_form.supervisor"></span>
-						input.preencher( autocomplete="off", type="text" id="nome_supervisor" name="nome_supervisor" value="#{Usuarios ? Usuarios[0].nome_supervisor : ''}", style="font-family:")
+					.col.s12.m6
+						label(for="nome_supervisor") <span data-i18n="demo.utilizador_form.supervisor"></span>
+						select.browser-default(id="nome_supervisor", name="nome_supervisor")
+							-for(let i=0; i<supers.length; i++)
+								option(value="#{supers[i].nome}" , data-cont="#{supers[i]._id}") #{supers[i].departamento} - #{supers[i].nome} 
 				.row
 					.col.s12.m6.input-field.exclusivo
 						label(for="telefone_supervisor") <span data-i18n="demo.utilizador_form.telefone_super"></span>
